tests/baselines/reference/project/noProjectOptionAndInputFiles/node/noProjectOptionAndInputFiles.errors.txt
lib.es5.d.ts(48,21): error TS6054: File 'lib.es2009.uint16array' has an unsupported extension. The only supported extensions are '.ts', '.tsx', '.d.ts', '.cts', '.d.cts', '.mts', '.d.mts'.


==== tsconfig.json (0 errors) ====
    { "files": [ "a.ts" ] }
==== a.ts (0 errors) ====
    var test = 10;